--- a/cloudformation/admin-api.yaml
+++ b/cloudformation/admin-api.yaml
@@ -33,6 +33,14 @@ Parameters:
   StageName:
     Type: String
     Default: Prod
+  ApiDomainName:
+    Type: String
+    Default: ""
+    Description: "Custom domain name for the API (optional - if not provided, API will use default execute-api domain)"
+  ApiCertificateArn:
+    Type: String
+    Default: ""
+    Description: "ACM certificate ARN for the custom domain (optional - required only if ApiDomainName is provided)"
 
 Resources:
   AdminApi:
@@ -53,6 +61,8 @@ Resources:
           LoggingLevel: INFO
           DataTraceEnabled: true
           MetricsEnabled: true
+          ThrottlingBurstLimit: 20
+          ThrottlingRateLimit: 10
 
   AdminApiAccessLogGroup:
     Type: AWS::Logs::LogGroup
@@ -153,7 +163,7 @@ Resources:
       FunctionName: !Sub "${RootStackName}-AdminLambda"
       CodeUri: ../src/admin_lambda/
       Handler: admin_lambda.lambda_handler
-      Runtime: python3.11
+      Runtime: python3.12
       MemorySize: 256
       Timeout: 30
       Role: !GetAtt AdminLambdaExecutionRole.Arn
