--- a/cloudformation/uktv-event-streaming-app.yaml
+++ b/cloudformation/uktv-event-streaming-app.yaml
@@ -20,26 +20,23 @@ Parameters:
     Type: String
     Description: "The username for the pre-created admin user."
     Default: "admin.user@example.com"
-  WatchModeApiKey:
+  WatchModeApiKeySecretArn:
     Type: String
-    NoEcho: true
-    Description: "The API key for WatchMode API (will be stored in Secrets Manager)"
+    Description: "The ARN of the existing secret in Secrets Manager containing the WatchMode API key"
   WatchModeHostname:
     Type: String
     Description: "The Hostname for WatchMode API"
     Default: "https://api.watchmode.com"
+  WafWebAclId:
+    Type: String
+    Description: "Optional WAF WebACL ID to associate with CloudFront distribution. Note: WAFv2 WebACLs for CloudFront must be created in us-east-1 region. If not provided, no WAF will be associated (WAF creation in this stack is disabled due to regional requirements)."
+    Default: ""
 
 Conditions:
   ShouldCreateDataStream: !Equals [ !Ref CreateDataStream, "true" ]
+  HasWafWebAcl: !Not [ !Equals [ !Ref WafWebAclId, "" ] ]
 
 Resources:
-  WatchModeApiKeySecret:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: !Sub "${AWS::StackName}/WatchModeApiKey"
-      Description: API key for WatchMode API
-      SecretString: !Ref WatchModeApiKey
-
   ProgrammesTable:
     Type: AWS::DynamoDB::Table
     Properties:
@@ -58,6 +55,64 @@ Resources:
       StreamSpecification:
         StreamViewType: NEW_IMAGE
 
+  KinesisEncryptionKey:
+    Type: AWS::KMS::Key
+    Condition: ShouldCreateDataStream
+    Properties:
+      Description: !Sub "KMS key for encrypting ${AWS::StackName} Kinesis stream"
+      KeyPolicy:
+        Version: '2012-10-17'
+        Statement:
+          - Sid: Enable IAM User Permissions
+            Effect: Allow
+            Principal:
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+            Action: kms:*
+            Resource: "*"
+          - Sid: Allow Kinesis to use the key
+            Effect: Allow
+            Principal:
+              Service: kinesis.amazonaws.com
+            Action:
+              - kms:Decrypt
+              - kms:GenerateDataKey
+            Resource: "*"
+
+  KinesisEncryptionKeyAlias:
+    Type: AWS::KMS::Alias
+    Condition: ShouldCreateDataStream
+    Properties:
+      AliasName: !Sub "alias/${AWS::StackName}-kinesis"
+      TargetKeyId: !Ref KinesisEncryptionKey
+
+  S3EncryptionKey:
+    Type: AWS::KMS::Key
+    Properties:
+      Description: !Sub "KMS key for encrypting ${AWS::StackName} S3 bucket"
+      KeyPolicy:
+        Version: '2012-10-17'
+        Statement:
+          - Sid: Enable IAM User Permissions
+            Effect: Allow
+            Principal:
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+            Action: kms:*
+            Resource: "*"
+          - Sid: Allow S3 to use the key
+            Effect: Allow
+            Principal:
+              Service: s3.amazonaws.com
+            Action:
+              - kms:Decrypt
+              - kms:GenerateDataKey
+            Resource: "*"
+
+  S3EncryptionKeyAlias:
+    Type: AWS::KMS::Alias
+    Properties:
+      AliasName: !Sub "alias/${AWS::StackName}-s3"
+      TargetKeyId: !Ref S3EncryptionKey
+
   ProgrammeDataStream:
     Type: AWS::Kinesis::Stream
     Condition: ShouldCreateDataStream
@@ -65,6 +120,9 @@ Resources:
       StreamModeDetails:
         StreamMode: ON_DEMAND
       RetentionPeriodHours: 24
+      StreamEncryption:
+        EncryptionType: KMS
+        KeyId: !Ref KinesisEncryptionKey
 
   WebsiteBucket:
     Type: AWS::S3::Bucket
@@ -75,6 +133,10 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
 
   CloudFrontOAI:
     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
@@ -93,6 +155,9 @@ Resources:
               CanonicalUser: !GetAtt CloudFrontOAI.S3CanonicalUserId
             Action: s3:GetObject
             Resource: !Sub "arn:aws:s3:::${WebsiteBucket}/*"
+
+  # Note: CloudFrontWebACL resource removed because WAFv2 for CloudFront must be created in us-east-1,
+  # but this stack deploys to eu-west-2. To use WAF, create it manually in us-east-1 and pass the ID via WafWebAclId parameter.
 
   WebsiteDistribution:
     Type: AWS::CloudFront::Distribution
@@ -117,6 +182,11 @@ Resources:
           DefaultTTL: 86400
           MaxTTL: 31536000
           MinTTL: 0
+        ViewerCertificate:
+          CloudFrontDefaultCertificate: true
+          MinimumProtocolVersion: TLSv1.2_2021
+        # Only associate WAF if WafWebAclId is provided (WAF must be created in us-east-1 separately)
+        WebACLId: !If [HasWafWebAcl, !Ref WafWebAclId, !Ref "AWS::NoValue"]
 
   # --- Nested Applications ---
   CognitoApp:
@@ -136,7 +206,7 @@ Resources:
       Parameters:
         ProgramDataTableName: !Ref ProgrammesTable
         ProgramDataTableArn: !GetAtt ProgrammesTable.Arn
-        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecret
+        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecretArn
         WatchModeHostname: !Ref WatchModeHostname
 
   TitleEnrichmentApp:
@@ -146,7 +216,7 @@ Resources:
       Parameters:
         ProgramDataTableName: !Ref ProgrammesTable
         ProgrammesTableStreamArn: !GetAtt ProgrammesTable.StreamArn
-        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecret
+        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecretArn
         WatchModeHostname: !Ref WatchModeHostname
 
   TitleRecommendationsConsumerApp:
@@ -175,7 +245,7 @@ Resources:
       Parameters:
         ProgramDataTableName: !Ref ProgrammesTable
         ProgramDataTableArn: !GetAtt ProgrammesTable.Arn
-        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecret
+        WatchModeApiKeySecretArn: !Ref WatchModeApiKeySecretArn
         WatchModeHostname: !Ref WatchModeHostname
         ProgrammeDataStreamName: !If [ShouldCreateDataStream, !Ref ProgrammeDataStream, ""]
         ProgrammeDataStreamArn: !If [ShouldCreateDataStream, !GetAtt ProgrammeDataStream.Arn, ""]
