--- a/cloudformation/user-preferences.yaml
+++ b/cloudformation/user-preferences.yaml
@@ -11,6 +11,14 @@ Parameters:
     Type: String
   UserPoolArn:
     Type: String
+  ApiDomainName:
+    Type: String
+    Default: ""
+    Description: "Custom domain name for the API (optional - if not provided, API will use default execute-api domain)"
+  ApiCertificateArn:
+    Type: String
+    Default: ""
+    Description: "ACM certificate ARN for the custom domain (optional - required only if ApiDomainName is provided)"
 
 Resources:
   # The API Gateway, with the OpenAPI spec now inlined for validation.
@@ -18,6 +26,16 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
+      MethodSettings:
+        - ResourcePath: '/*'
+          HttpMethod: '*'
+          ThrottlingBurstLimit: 100
+          ThrottlingRateLimit: 50
+        # Stricter limits for write operations
+        - ResourcePath: '/preferences'
+          HttpMethod: PUT
+          ThrottlingBurstLimit: 50
+          ThrottlingRateLimit: 25
       DefinitionBody:
         openapi: "3.0.1"
         info:
